<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    tools:context=".CustomerRegLoginActivity">


    <EditText
        android:id="@+id/customerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statusCustomer"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/customerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customerEmail"
        android:hint="@string/pass"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signInCustomer"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/customerPassword"
        android:background="@android:color/holo_green_light"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/signIn" />

    <Button
        android:id="@+id/signUpCustomer"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/signInCustomer"
        android:background="@android:color/holo_red_light"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/signUp" />

    <TextView
        android:id="@+id/statusCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="Вход для клиентов" />

    <TextView
        android:id="@+id/accountCreateCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signInCustomer"
        android:layout_marginTop="5dp"
        android:text="@string/createQuestion" />

</RelativeLayout>